se arreglan errores de base de datos

--- a/pañol/templates/galeria.html
+++ b/pañol/templates/galeria.html
@@ -1,4 +1,5 @@
 {% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -178,6 +179,6 @@
   <div class="footerbajo">
     <p>DWYM 2DO SEMESTRE 2019<a href="https://www.duoc.cl/carrera/ingenieria-en-informatica"> Duoc UC Sede Maipú</a></p>
   </div>
-  {% block content %}{% endblock %}
+  {% endblock %}
 </body>
 </html>
