--- a/pañol/templates/formulario.html
+++ b/pañol/templates/formulario.html
@@ -24,6 +24,7 @@
           <li><a href="http://127.0.0.1:8000/formulario">REGISTRO</a></li>
           <li><a href="http://127.0.0.1:8000/galeria">GALERIA</a></li>
           <li><a href="http://127.0.0.1:8000/we">Nosotros</a></li>
+		  <li><a href="http://127.0.0.1:8000/loginvista">Login</a></li>
         </ul>
         {% endblock %}
       </nav>
