--- a/pañol/templates/loginvista.html
+++ b/pañol/templates/loginvista.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,9 +7,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   {% block title %}<title>PañolContigo</title>{% endblock %}
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type="text/css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-  <link rel="stylesheet" href= {% static 'css/styleWe.css' %}>
-  <link rel="icon" href={% static 'img/logo.jpg' %}> 
-  {% load static %}   
+  <link rel="stylesheet" href= {% static 'css/styleFormulario.css' %}>
+  <link rel="icon" href={% static 'img/logo.jpg' %}>
+  {% load static %}    
 </head>
 
 <body>
@@ -30,57 +30,45 @@
     </div>
   </header>
 
-  
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-  
-  
-  
-    <div class="section">
-        
-      
-      <div class="caja">
+  <main>
+    <div class="body">
+      <center>
+      <div class="box">
+        <form> 
+          <h2>
+            Login
+          </h2>
+
+          <br>
+          <br/>   
           
-          <h1 class="titulo">Equipo de Trabajo</h1>
-        <div class="testimonial-pics">
-          <img src={% static 'img/p1.jpg' %} alt="test-1" class="active">
-          <img src={% static 'img/p3.jpeg' %} alt="test-2">
-          <img src={% static 'img/p2.jpg' %} alt="test-3">
-        </div>
-        <div class="contents">
+          <div class="inputBox">
+            <label for="txtName">Usuario:</label>
+            <input type="text" maxlength="30" minlength="2" id="txtName"placeholder="Ingrese Nombre" required/>
             
-          <div class="parrafo active" id="test-1">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab consequatur et adipisci ut, impedit cumque, similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Esteban / itivan_tm</span>
           </div>
-          
-          <div class="parrafo" id="test-2">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elimet, consectetur adipisicing eli t. Ab consequatur et adipisci ut, impedit cumque, similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Camila / c_vmilaaaaaaaaaa</span>
-          </div>
-          <div class="parrafo" id="test-3">
-            <p>Lorem  similique, eum tenetur, numquam eligendi aliquid. Nulla sit, cupiditate corporis labore, modi natus officiis asperiores!</p>
-            <span class="description">Felipe / felipe_ordenes</span>
-          </div>
-          
-        </div>
-        
+          <br>
+
+          <div class="inputBox">       
+            <label for="txtCorreo">Cree una contraseña:</label>
+            <input id="txtCorreo" type="password" onkeyup="modifyText()" placeholder="Ingresar contraseña" required />
+            
+          </div> 
+
+          <br>
+          <br>
+          <input type="submit" name="" value="Aceptar">
+		   <li> <a href="http://127.0.0.1:8000/formulario">Registrarme</a></li>
+
+          <br>
+          <br /> 
+        </form>    
       </div>
+      </center>
     </div>
-      
-    
-
-    <script type="text/javascript">
-      $('.testimonial-pics img').click(function(){
-        $(".testimonial-pics img").removeClass("active");
-        $(this).addClass("active");
-
-        $(".parrafo").removeClass("active");
-        $("#"+$(this).attr("alt")).addClass("active");
-      });
-    </script>
-
-
+  </main>
+   
     
   <div class="footer">
 
@@ -98,7 +86,7 @@
         <li><a href="info.html">Información</a></li>
         <li><a href="formulario.html">Registro</a></li>
         <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="we.html">Nosotros</a></li>
+        <li><a href="#">Nosotros</a></li>
       </ul>
     </div>
 
