--- a/pañol/templates/formulario.html
+++ b/pañol/templates/formulario.html
@@ -19,12 +19,12 @@
         <h1 class="duoc"><a href="index.html"><img src={% static 'img/logo.jpg' %} alt="logoduoc"></a></h1>
         {% block sidebar %}
         <ul>
-          <li><a href="http://127.0.0.1:8000/index">INICIO</a></li>
-          <li><a href="http://127.0.0.1:8000/info">INFORMACION</a></li>
-          <li><a href="http://127.0.0.1:8000/formulario">REGISTRO</a></li>
-          <li><a href="http://127.0.0.1:8000/galeria">GALERIA</a></li>
-          <li><a href="http://127.0.0.1:8000/we">Nosotros</a></li>
-		  <li><a href="http://127.0.0.1:8000/loginvista">Login</a></li>
+          <li><a href="http://duoc.pythonanywhere.com/index">INICIO</a></li>
+          <li><a href="http://duoc.pythonanywhere.com/info">INFORMACION</a></li>
+          <li><a href="http://duoc.pythonanywhere.com/formulario">REGISTRO</a></li>
+          <li><a href="http://duoc.pythonanywhere.com/galeria">GALERIA</a></li>
+          <li><a href="http://duoc.pythonanywhere.com/we">Nosotros</a></li>
+		      <li><a href="http://duoc.pythonanywhere.com/loginvista">Login</a></li>
         </ul>
         {% endblock %}
       </nav>
@@ -109,11 +109,11 @@
     </div>
     <div class="footermenu">
       <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="info.html">Información</a></li>
-        <li><a href="formulario.html">Registro</a></li>
-        <li><a href="galeria.html">Galeria</a></li>
-        <li><a href="#">Nosotros</a></li>
+        <li><a href="http://duoc.pythonanywhere.com/index.html">Inicio</a></li>
+        <li><a href="http://duoc.pythonanywhere.com/info.html">Información</a></li>
+        <li><a href="http://duoc.pythonanywhere.com/formulario.html">Registro</a></li>
+        <li><a href="http://duoc.pythonanywhere.com/galeria.html">Galeria</a></li>
+        <li><a href="http://duoc.pythonanywhere.com/we.html">Nosotros</a></li>
       </ul>
     </div>
 
