--- a/pañol/templates/index.html
+++ b/pañol/templates/index.html
@@ -20,11 +20,11 @@
         <h1 class="duoc"><a href="index.html"><img src={% static 'img/logo.jpg' %} alt="logoduoc"></a></h1>
         {% block sidebar %}
         <ul>
-          <li><a href="http://duoc.pythonanywhere.com/index">INICIO</a></li>
-          <li><a href="http://duoc.pythonanywhere.com/info">INFORMACION</a></li>
-          <li><a href="http://duoc.pythonanywhere.com/galeria">GALERIA</a></li>
-          <li><a href="http://duoc.pythonanywhere.com/we">Nosotros</a></li>
-		      <li><a href="http://duoc.pythonanywhere.com/loginvista">Login</a></li>
+          <li><a href="http://dwm.pythonanywhere.com/index">INICIO</a></li>
+          <li><a href="http://dwm.pythonanywhere.com/info">INFORMACION</a></li>
+          <li><a href="http://dwm.pythonanywhere.com/galeria">GALERIA</a></li>
+          <li><a href="http://dwm.pythonanywhere.com/we">Nosotros</a></li>
+		      <li><a href="http://dwm.pythonanywhere.com/loginvista">Login</a></li>
         </ul>
         {% endblock %}
       </nav>
@@ -129,12 +129,12 @@
     </div>
     <div class="footermenu">
       <ul>
-        <li><a href="http://duoc.pythonanywhere.com/index.html">Inicio</a></li>
-        <li><a href="http://duoc.pythonanywhere.com/info.html">Información</a></li>
-        <li><a href="http://duoc.pythonanywhere.com/formulario.html">Registro</a></li>
-        <li><a href="http://duoc.pythonanywhere.com/galeria.html">Galeria</a></li>
-        <li><a href="http://duoc.pythonanywhere.com/we.html">Nosotros</a></li>
-        <li><a href="http://duoc.pythonanywhere.com/loginvista">Login</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/index.html">Inicio</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/info.html">Información</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/formulario.html">Registro</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/galeria.html">Galeria</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/we.html">Nosotros</a></li>
+        <li><a href="http://dwm.pythonanywhere.com/loginvista">Login</a></li>
       </ul>
     </div>
 
