--- a/pañol/templates/loginvista.html
+++ b/pañol/templates/loginvista.html
@@ -59,7 +59,7 @@
           <br>
           <br>
           <input type="submit" name="" value="Aceptar">
-		   <li> <a href="http://127.0.0.1:8000/formulario">Registrarme</a></li>
+		   <li> <a href="http://dwm.pythonanywhere.com/formulario">Registrarme</a></li>
 
           <br>
           <br /> 
